# apple-mail-exporter

./: .gitignore  Package.swift  README.md  export_emails.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
Sources/AppleMailExporter/: Config.swift  Database.swift  EMLXParser.swift  Exporter.swift  MailboxResolver.swift  MarkdownFormatter.swift  Models.swift  Utils.swift  Version.swift
Sources/CLI/: CLI.swift  InteractiveMode.swift
src/apple_mail_exporter/: __init__.py  cli.py  config.py  db.py  emlx.py  exporter.py  mailbox.py  models.py  utils.py  version.py
tests/: test_emlx.py  test_mailbox.py  test_utils.py
tests/AppleMailExporterTests/: ConfigTests.swift  DatabaseTests.swift  EMLXParserTests.swift  MailboxResolverTests.swift  MarkdownFormatterTests.swift  UtilsTests.swift
