[project]
name = "apple-mail-exporter"
version = "0.1.0"
description = "Search and export emails from Apple Mail's local database by keyword."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Aayush Pokharel"}]
license = "MIT"
keywords = ["apple-mail", "email", "export", "macos"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: MacOS :: MacOS X",
]

[project.urls]
Homepage = "https://github.com/Aayush9029/apple-mail-exporter"
Repository = "https://github.com/Aayush9029/apple-mail-exporter"
Issues = "https://github.com/Aayush9029/apple-mail-exporter/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
apple-mail-exporter = "apple_mail_exporter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
